# hedos

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.resolved  Package.swift  README.md  SECURITY.md  dist-workspace.toml  tasks.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/src/commands/: chat.rs  image.rs  launch.rs  ls.rs  mod.rs  pull.rs  rm.rs  run.rs  scan.rs  serve.rs  speak.rs  stats.rs  transcribe.rs  unload.rs  warm.rs
cli/src/support/: banner.rs  download.rs  harnesses.rs  interactive.rs  machine.rs  mod.rs  output.rs  paths.rs  payload.rs  progress.rs  serving.rs  session.rs  shelf_table.rs  signals.rs  spinner.rs
docs/: README.md  architecture.md  cli.md  configuration.md  configuring-models.md  gateway.md  getting-started.md  models.md  orchestra.md  runtimes.md  themes.md
gateway/: Cargo.toml
gateway/src/: admission.rs  audit.rs  auth.rs  defaults.rs  error.rs  identity.rs  kernel_gateway.rs  lib.rs  param_guard.rs  port.rs  request.rs  resolver.rs  responder.rs  router.rs  scopes.rs  server.rs  stats.rs  surface.rs
gateway/src/handlers/: chat.rs  embeddings.rs  generate.rs  images.rs  messages.rs  mod.rs  models.rs  speech.rs  stream.rs  transcriptions.rs
gateway/src/wire/: anthropic.rs  base64.rs  mod.rs  multipart.rs  ollama.rs  openai.rs  param_decoding.rs  timestamp.rs
gateway/tests/: audit_log.rs  chat_handlers.rs  embedding_handlers.rs  generate_handlers.rs  handler_support.rs  image_handlers.rs  kernel_gateway.rs  messages_handler.rs  model_handlers.rs  router.rs  server.rs  speech_handlers.rs  transcription_handlers.rs
gateway/tests/common/: mod.rs
kernel/: Cargo.toml
kernel/src/: fs.rs  lib.rs  persistence.rs  registry.rs  removal.rs  time.rs  util.rs
kernel/src/artifacts/: artifact.rs  gallery.rs  mod.rs  provenance.rs  speech_text.rs  store.rs
kernel/src/capabilities/: chat.rs  chunk.rs  mod.rs  stop_matcher.rs  think_splitter.rs  tools.rs
kernel/src/discovery/: duplicates.rs  gguf_models.rs  gguf_shards.rs  habitat.rs  hf_scanner.rs  lm_studio_scanner.rs  loose_file_scanner.rs  mod.rs  modality_hints.rs  ollama_scanner.rs  scanner.rs  service.rs
kernel/src/install/: bytes.rs  catalog.rs  error.rs  event.rs  file_selection.rs  mod.rs  ollama_pull.rs  plan.rs  provider.rs  reference.rs
kernel/src/jobs/: event.rs  history.rs  job.rs  mod.rs  seeding.rs
kernel/src/manifests/: manifest.rs  mod.rs  provenance.rs
kernel/src/profiles/: configuration.rs  context_budget.rs  fit.rs  mod.rs  profile.rs
kernel/src/records/: byte_format.rs  identifiers.rs  json_value.rs  mod.rs  model_record.rs  param_form.rs  text_budget.rs
kernel/src/resolution/: format.rs  gguf.rs  identification_cache.rs  identity.rs  mod.rs  pipelines.rs  safetensors.rs
kernel/tests/: artifacts.rs  capabilities.rs  chat.rs  discovery.rs  discovery_scanners.rs  discovery_service.rs  habitat.rs  hf_scanner.rs  identification_cache.rs  identify.rs  identity.rs  install_events.rs  install_plan.rs  install_reference.rs  install_selection.rs  jobs.rs  lm_studio_scanner.rs  loose_file_scanner.rs  manifests.rs  modality_hints.rs  param_form.rs  persistence.rs  pipelines.rs  profiles.rs  records.rs  registry.rs  resolution.rs  tools.rs  wire_types.rs
kernel/tests/support/: mod.rs
runtime/: Cargo.toml  build.rs
runtime/runtimes/: pyproject.toml
runtime/runtimes/python-diffusers/: main.py  requirements.in
runtime/runtimes/python-embeddings/: main.py
runtime/runtimes/python-mflux/: main.py  manifest.toml
runtime/runtimes/python-mlx-audio/: main.py  requirements.in
runtime/runtimes/python-mlx-lm/: main.py
runtime/runtimes/python-mlx-vlm/: main.py  manifest.toml
runtime/runtimes/python-whisper-cpp/: main.py  manifest.toml  requirements.in
runtime/runtimes/tests/: conftest.py  test_frame_protocol.py  test_request_shaping.py  test_tool_call_extraction.py
runtime/shim-apple/: shim.swift
runtime/shim-mlx/: Package.resolved  Package.swift
runtime/shim-mlx/Sources/HedosMlxShim/: shim.swift
runtime/src/: audio.rs  boot.rs  environment.rs  frame_codec.rs  governed.rs  lib.rs  manifests.rs  process.rs  python_runtime.rs  removal.rs  resolution.rs  settings.rs  time.rs  utf8_stream.rs  util.rs
runtime/src/adapters/: a1111.rs  comfy_ui.rs  daemon_liveness.rs  diffusers.rs  embeddings.rs  grammar.rs  line_stream.rs  llama_pool.rs  llama_server.rs  manifest_command.rs  manifest_sidecar.rs  mflux.rs  mlx_audio.rs  mlx_lm.rs  mlx_vlm.rs  mod.rs  ollama.rs  openai.rs  sidecar_adapter.rs  sidecar_job_adapter.rs  sidecar_stream.rs  tool_scanner.rs
runtime/src/adapters/apple_foundation/: adapter.rs  backend.rs  ffi.rs  mod.rs  scanner.rs  wire.rs
runtime/src/adapters/mlx_swift/: adapter.rs  backend.rs  ffi.rs  mod.rs  wire.rs
runtime/src/adapters/whisper/: adapter.rs  audio.rs  backend.rs  engine.rs  mod.rs  options.rs
runtime/src/facade/: admission.rs  artifact_writer.rs  mod.rs
runtime/src/governor/: gate.rs  generation_slot.rs  lease.rs  memory.rs  mod.rs  policy.rs  residency.rs
runtime/src/install/: hf_cache.rs  hf_hub.rs  huggingface.rs  mod.rs  ollama.rs  provider.rs  service.rs  transport.rs
runtime/src/jobs/: mod.rs  scheduler.rs
runtime/src/manifests/: community.rs  mod.rs  store.rs
runtime/src/sidecar/: bundle.rs  bundled.rs  mod.rs  model_paths.rs  spec.rs  supervisor.rs
runtime/tests/: adapters.rs  audio.rs  environment.rs  facade.rs  facade_discovery.rs  frame_codec.rs  governed.rs  governor.rs  install_hf_cache.rs  install_hf_hub.rs  install_huggingface.rs  install_ollama.rs  install_service.rs  install_transport.rs  jobs.rs  llama_pool.rs  llama_server.rs  manifests.rs  mlx_swift_live.rs  ollama.rs  openai.rs  process.rs  python_runtime.rs  removal.rs  resolution.rs  sidecar.rs
runtime/tests/support/: fake_sidecar.py  mod.rs
runtimes/: README.md
scripts/: build_app.sh  build_dmg.sh  dmg_background.py  dmg_settings.py  release.sh  render_icon.swift
(+538 files in other folders)
