[workspace]
resolver = "3"
members = [
    "kernel",
    "runtime",
    "gateway",
    "cli",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"
authors = ["theiskaa"]
repository = "https://github.com/theiskaa/hedos"

[workspace.dependencies]
kernel = { path = "kernel" }
runtime = { path = "runtime" }
gateway = { path = "gateway" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync", "signal", "time", "io-util"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[profile.release]
lto = "thin"
strip = true
