[workspace]
resolver = "3"
members = [
    "kernel",
    "runtime",
    "gateway",
    "cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["theiskaa"]
repository = "https://github.com/theiskaa/hedos"

[workspace.dependencies]
kernel = { path = "kernel" }
runtime = { path = "runtime" }
gateway = { path = "gateway" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync", "signal", "time", "io-util"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
indicatif = "0.18"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
dirs = "6"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
toml = "1"
regex = "1"
fs2 = "0.4"
include_dir = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[profile.release]
lto = "thin"
strip = true
