[workspace]
resolver = "3"
members = [
    "kernel",
    "runtime",
    "gateway",
    "cli",
]

[workspace.package]
version = "1.1.1"
edition = "2024"
license = "MIT"
authors = ["theiskaa"]
repository = "https://github.com/theiskaa/hedos"
homepage = "https://hedos.ai"
documentation = "https://hedos.ai/docs"

[workspace.dependencies]
# Published under `hedos-*` (the bare names are taken on crates.io) but aliased
# back to the bare names here, so every `use kernel::…` keeps working. The
# `version` fields are required to publish a crate with path dependencies.
kernel = { package = "hedos-kernel", path = "kernel", version = "1.1.1" }
runtime = { package = "hedos-runtime", path = "runtime", version = "1.1.1" }
gateway = { package = "hedos-gateway", path = "gateway", version = "1.1.1" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync", "signal", "time", "io-util"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
indicatif = "0.18"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libloading = "0.8"
ratatui = "0.30"
dirs = "6"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
toml = "1"
regex = "1"
fs2 = "0.4"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[profile.release]
lto = "thin"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
