[package]
# Named for the binary it produces: release artifacts and the Homebrew formula
# take the package name, so this must be `hedos`, not `cli`.
name = "hedos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Discover, install, and serve the local models already on your machine."
readme = "../README.md"

[[bin]]
name = "hedos"
path = "src/main.rs"

[dependencies]
kernel.workspace = true
runtime.workspace = true
gateway.workspace = true
clap.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
tokio.workspace = true
serde_json.workspace = true
