[package]
# Named for the binary it produces: release artifacts and the Homebrew formula
# take the package name, so this must be `hedos`, not `cli`.
name = "hedos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Discover, install, and serve the local models already on your machine."
readme = "../README.md"

# Forwarded to the runtime crate, which compiles the Swift FoundationModels
# shim and the FFI backend that drives it. macOS-only; needs the macOS 26 SDK.
[features]
apple-foundation = ["runtime/apple-foundation"]

[[bin]]
name = "hedos"
path = "src/main.rs"

[dependencies]
kernel.workspace = true
runtime.workspace = true
gateway.workspace = true
clap.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
tokio.workspace = true
serde_json.workspace = true
