[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kernel.workspace = true
runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true

[dev-dependencies]
reqwest.workspace = true
