[package]
name = "hedos-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "The hedos gateway: a loopback server speaking the OpenAI and Ollama wire formats."

# The package publishes as `hedos-gateway` (the bare name is taken on crates.io),
# but the library keeps its bare name so `use gateway::…` works everywhere,
# including this crate's own integration tests.
[lib]
name = "gateway"

[dependencies]
kernel.workspace = true
runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
regex.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true

[dev-dependencies]
reqwest.workspace = true
