[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
