[package]
name = "hedos-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "The hedos kernel: model records, registry, discovery, install planning, and resolution."

# The package publishes as `hedos-kernel` (the bare name is taken on crates.io),
# but the library keeps its bare name so `use kernel::…` works everywhere,
# including this crate's own integration tests.
[lib]
name = "kernel"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
toml.workspace = true
regex.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
