[package]
name = "hedos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "The hedos runtime: execution adapters, sidecar supervision, and the memory governor."
build = "build.rs"

# The package publishes as `hedos-runtime` (the bare name is taken on crates.io),
# but the library keeps its bare name so `use runtime::…` works everywhere,
# including this crate's own integration tests.
[lib]
name = "runtime"

# `apple-foundation` compiles the Swift FoundationModels shim (build.rs) and
# the FFI backend that drives it. macOS-only; needs Xcode with the macOS 26 SDK.
[features]
apple-foundation = []

[dependencies]
kernel.workspace = true
fs2.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[build-dependencies]
flate2.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
