[package]
name = "hedos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "The hedos runtime: execution adapters, sidecar supervision, and the memory governor."
build = "build.rs"

# The package publishes as `hedos-runtime` (the bare name is taken on crates.io),
# but the library keeps its bare name so `use runtime::…` works everywhere,
# including this crate's own integration tests.
[lib]
name = "runtime"

[dependencies]
kernel.workspace = true
fs2.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[build-dependencies]
flate2.workspace = true

# The Apple Intelligence bridge loads its Swift shim at runtime; like the
# framework it wraps, it exists only on macOS.
[target.'cfg(target_os = "macos")'.dependencies]
libloading.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
